@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-09T08:20:27Z",
-  "count_outdated" : 258,
-  "uniques_outdated" : 117,
-  "count" : 310,
-  "uniques" : 131,
+  "timestamp" : "2022-05-09T16:24:49Z",
+  "count_outdated" : 261,
+  "uniques_outdated" : 119,
+  "count" : 311,
+  "uniques" : 132,
   "views" : [
-    {
-      "timestamp": "2022-04-25T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-04-28T00:00:00Z",
       "count": 5,
