@@ -1,12 +1,7 @@
 {
-  "count": 52,
-  "uniques": 13,
+  "count": 50,
+  "uniques": 12,
   "views": [
-    {
-      "timestamp": "2022-04-25T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-04-28T00:00:00Z",
       "count": 5,
